# xword_constructor

./: .project  Cargo.toml  README.md  crossc.xword  crossp.xword  problem.xword  problem10x10.xword  problem12x12.xword  problem2.xword  problem2x2.xword  run_xword.sh  template.xtempl
src/: TODO  board.rs  common.rs  constructor.rs  fastmath.rs  fixed_grid.rs  lib.rs  main.rs
src/global2/: constructor2.rs  data.rs  mod.rs  selectable_moves.rs  sliced_arena.rs  variant_grid.rs  weighted_search_tree.rs  weighted_selection_tree.rs
src/global2/variant_grid/: compat_map.rs  mod.rs  shrink_vec.rs
