[package]

name = "xword_constructor"
version = "0.0.1"
authors = [ "Kirill Khazan <kirillkh@gmail.com>" ]

[[bin]]

name = "xword"

[dependencies]
ndarray = "0.4"
rand = "0.3"
regex = "0.1"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[features]
default = ["debug_rng"]

debug_rng = []
