[package]
name = "xword_constructor"
version = "0.0.1"
authors = [ "Kirill Khazan <kirillkh@gmail.com>" ]

[lib]
name = "xword"
path = "src/lib.rs"

[[bin]]
name = "xword"
path = "src/bin/main.rs"

[[bin]]
name = "probgen"
path = "src/bin/problem_gen.rs"


[dependencies]
ndarray = "0.4"
rand = "0.3"
regex = "0.1"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[features]
default = ["debug_rng"]

debug_rng = []
