[package]
name = "xword_constructor"
version = "0.2.1"
authors = [ "Kirill Khazan <kirillkh@gmail.com>" ]

[lib]
name = "xword"
path = "src/lib.rs"

[[bin]]
name = "xword"
path = "src/bin/main.rs"

[[bin]]
name = "probgen"
path = "src/bin/problem_gen.rs"



[dependencies]
ndarray = "0.6"
rand = "0.3"
regex = "0.1"
getopts = "0.2"
fnv = "1.0.5"
bit-set = "0.4.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[features]
default = ["debug_rng"]

debug_rng = []
